fix: stretch grid container

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -66,5 +66,6 @@ main {
     display: grid;
     grid-template-rows: auto 1fr auto;
     grid-template-columns: minmax(0, 1fr);
-    height: 100vh;
+    min-height: 100vh;
+    z-index: 1;
 }
